--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we updated our privacy grade algorithm, optimized battery usage and hardened the app against address bar spoofing. We also fixed a bug which broke a few features for our Lollipop users.
+In this release we added a light theme, visit app settings to try it out.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
