--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,8 +161,21 @@
     <string name="settingsAboutDuckduckgo">About DuckDuckGo</string>
     <string name="settingsVersion">Version</string>
     <string name="leaveFeedback">Leave Feedback</string>
+
+    <!-- Settings - Automatically clearing data -->
+    <string name="settingsAutomaticallyClearingDialogSave">Save</string>
+
     <string name="settingsAutomaticallyClearWhat">Automatically clear…</string>
+    <string name="settingsAutomaticallyClearWhatOptionNone">None</string>
+    <string name="settingsAutomaticallyClearWhatOptionTabs">Tabs</string>
+    <string name="settingsAutomaticallyClearWhatOptionTabsAndData">Tabs and data</string>
+
     <string name="settingsAutomaticallyClearWhen">Clear on…</string>
+    <string name="settingsAutomaticallyClearWhenAppExitOnly">App exit only</string>
+    <string name="settingsAutomaticallyClearWhenAppExit5Mins">App exit, Inactive for 5 minutes</string>
+    <string name="settingsAutomaticallyClearWhenAppExit15Mins">App exit, Inactive for 15 minutes</string>
+    <string name="settingsAutomaticallyClearWhenAppExit30Mins">App exit, Inactive for 30 minutes</string>
+    <string name="settingsAutomaticallyClearWhenAppExit60Mins">App exit, Inactive for 60 minutes</string>
 
     <!-- About Activity -->
     <string name="aboutActivityTitle">About us</string>
