Add progress bar and error message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,5 +212,6 @@
     <string name="surveyDismissBannerContentDescription">Dismiss survey banner</string>
     <string name="surveyTitle">DUCKDUCKGO SURVEY</string>
     <string name="surveyDismissContentDescription">Dismiss survey</string>
+    <string name="surveyLoadingErrorText">Oh no! Our survey is not currently loading, please try again later.</string>
 
 </resources>
