--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we added a light theme, visit app settings to try it out.
+In this release, we added an anonymous survey capability so we can ask you questions from time-to-time and make the app better.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
