--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
     <string name="surveyBannerTitle">Help us improve the app!</string>
     <string name="surveyDescription">Take our short, anonymous survey and share your feedback.</string>
     <string name="surveyLaunchButton">Take the Survey</string>
+    <string name="surveyDismissButton">No thanks</string>
     <string name="surveyDismissBannerContentDescription">Dismiss survey banner</string>
     <string name="surveyTitle">DUCKDUCKGO SURVEY</string>
     <string name="surveyDismissContentDescription">Dismiss survey</string>
