--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,7 @@
 ## What's new in this release?
-In this release, we added an anonymous survey capability so we can ask you questions from time-to-time and make the app better.
+In this release, we added a setting to allow you to clear your data automatically; if you want it, you can have it deleting all tabs and all cookies, or just deleting old tabs.
+
+We also made improvements under the hood to improve the cookie clearing process.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
