--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,7 +1,7 @@
 ## What's new in this release?
 In this release, we added new settings to allow you to automatically clear your tabs and data.
 
-We also made improvements under the hood to improve the data clearing process.
+We also made improvements under the hood to enhance the data clearing process.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
