--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,15 +206,20 @@
     <string name="addToHome">Add to Home</string>
 
     <!-- User Survey -->
+    <string name="surveyCtaTitle">Help us improve the app!</string>
+    <string name="surveyCtaDescription">Take our short, anonymous survey and share your feedback.</string>
+    <string name="surveyCtaLaunchButton">Take the Survey</string>
+    <string name="surveyCtaDismissButton">No thanks</string>
     <string name="surveyActivityTitle">User Survey</string>
-    <string name="surveyBannerTitle">Help us improve the app!</string>
-    <string name="surveyDescription">Take our short, anonymous survey and share your feedback.</string>
-    <string name="surveyLaunchButton">Take the Survey</string>
-    <string name="surveyDismissButton">No thanks</string>
-    <string name="surveyDismissBannerContentDescription">Dismiss survey banner</string>
     <string name="surveyTitle">DUCKDUCKGO SURVEY</string>
     <string name="surveyDismissContentDescription">Dismiss survey</string>
     <string name="surveyLoadingErrorTitle">Oh no!</string>
     <string name="surveyLoadingErrorText">Our survey is not currently loading.\nPlease try again later.</string>
+
+    <!-- Add to home -->
+    <string name="addHomeCtaTitle">Try Our Search Widget!</string>
+    <string name="addHomeCtaDescription">Add our search widget to your home screen for quick and easy access.</string>
+    <string name="addHomeCtaLaunchButton">Install Widget</string>
+    <string name="addHomeCtaDismissButton">No thanks</string>
 
 </resources>
