--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,10 +216,19 @@
     <string name="surveyLoadingErrorTitle">Oh no!</string>
     <string name="surveyLoadingErrorText">Our survey is not currently loading.\nPlease try again later.</string>
 
-    <!-- Add to home -->
-    <string name="addHomeCtaTitle">Try Our Search Widget!</string>
-    <string name="addHomeCtaDescription">Add our search widget to your home screen for quick and easy access.</string>
-    <string name="addHomeCtaLaunchButton">Install Widget</string>
-    <string name="addHomeCtaDismissButton">No thanks</string>
+    <!-- Add widget -->
+    <string name="addWidgetCtaTitle">Try Our Search Widget!</string>
+    <string name="addWidgetCtaDescription">Add our search widget to your home screen for quick and easy access.</string>
+    <string name="addWidgetCtaLaunchButton">Install Widget</string>
+    <string name="addWidgetCtaDismissButton">No thanks</string>
+    <string name="addWidgetInstructionsActivityTitle">Add widget</string>
+    <string name="addWidgetInstruction1Label">1</string>
+    <string name="addWidgetInstruction1">Long press your home screen then open the widgets menu</string>
+    <string name="addWidgetInstruction2Label">2</string>
+    <string name="addWidgetInstruction2">Find and select the DuckDuckGo widget</string>
+    <string name="addWidgetInstruction3Label">3</string>
+    <string name="addWidgetInstruction3">Drag the widget to your home screen</string>
+    <string name="addWidgetInstructionsButtonGoHome">Go to Home Screen</string>
+    <string name="addWidgetInstructionsButtonClose">Close</string>
 
 </resources>
