--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,14 +223,30 @@
     <string name="addToHome">Add to Home</string>
 
     <!-- User Survey -->
+    <string name="surveyCtaTitle">Help us improve the app!</string>
+    <string name="surveyCtaDescription">Take our short, anonymous survey and share your feedback.</string>
+    <string name="surveyCtaLaunchButton">Take the Survey</string>
+    <string name="surveyCtaDismissButton">No thanks</string>
     <string name="surveyActivityTitle">User Survey</string>
-    <string name="surveyBannerTitle">Help us improve the app!</string>
-    <string name="surveyDescription">Take our short, anonymous survey and share your feedback.</string>
-    <string name="surveyLaunchButton">Take the Survey</string>
-    <string name="surveyDismissBannerContentDescription">Dismiss survey banner</string>
     <string name="surveyTitle">DUCKDUCKGO SURVEY</string>
     <string name="surveyDismissContentDescription">Dismiss survey</string>
     <string name="surveyLoadingErrorTitle">Oh no!</string>
     <string name="surveyLoadingErrorText">Our survey is not currently loading.\nPlease try again later.</string>
+
+    <!-- Add widget -->
+    <string name="addWidgetCtaTitle">Try Our Search Widget!</string>
+    <string name="addWidgetCtaDescription">Add our search widget to your home screen for quick and easy access.</string>
+    <string name="addWidgetCtaAutoLaunchButton">Add Widget</string>
+    <string name="addWidgetCtaInstructionsLaunchButton">Show Me</string>
+    <string name="addWidgetCtaDismissButton">Dismiss</string>
+    <string name="addWidgetInstructionsActivityTitle">Add widget</string>
+    <string name="addWidgetInstruction1Label">1</string>
+    <string name="addWidgetInstruction1">Long press your home screen then open the widgets menu</string>
+    <string name="addWidgetInstruction2Label">2</string>
+    <string name="addWidgetInstruction2">Find the DuckDuckGo widget</string>
+    <string name="addWidgetInstruction3Label">3</string>
+    <string name="addWidgetInstruction3">Drag the widget to your home screen</string>
+    <string name="addWidgetInstructionsButtonGoHome">Go to Home Screen</string>
+    <string name="addWidgetInstructionsButtonClose">Close</string>
 
 </resources>
