--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,6 +251,7 @@
 
     <!-- Clear Notification -->
     <string name="clearNotificationTitle">DuckDuckGo Privacy Browser</string>
-    <string name="clearNotificationDescription">Customize how DuckDuckGo clears your browsing data.</string>
+    <string name="clearNotificationDescription">Customize how DuckDuckGo clears your browsing data 🔥</string>
+    <string name="clearNotificationDescriptionLegacy">Customize how DuckDuckGo clears your browsing data.</string>
 
 </resources>
