--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,4 +249,24 @@
     <string name="addWidgetInstructionsButtonGoHome">Go to Home Screen</string>
     <string name="addWidgetInstructionsButtonClose">Close</string>
 
+    <!-- App Enjoyment / Rating / Feedback -->
+    <string name="app_enjoyment_dialog_title">Enjoying the app?</string>
+    <string name="app_enjoyment_dialog_message">We\'d love to know if we\'re meeting your needs</string>
+    <string name="app_enjoyment_dialog_positive_button">@string/yes</string>
+    <string name="app_enjoyment_dialog_negative_button">@string/no</string>
+
+
+    <string name="rate_app_dialog_title">Rate the app</string>
+    <string name="rate_app_dialog_message">Your feedback matters. Please share the love with a 5-star review</string>
+    <string name="rate_app_dialog_positive_button">@string/yes</string>
+    <string name="rate_app_dialog_negative_button">@string/no</string>
+
+    <string name="give_feedback_dialog_title">We\'re sorry to hear that</string>
+    <string name="give_feedback_dialog_message">Let us know how we can improve the app for you</string>
+    <string name="give_feedback_dialog_positive_button">@string/yes</string>
+    <string name="give_feedback_dialog_negative_button">@string/no</string>
+
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
 </resources>
