--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,18 +255,18 @@
     <string name="app_enjoyment_dialog_positive_button">@string/yes</string>
     <string name="app_enjoyment_dialog_negative_button">@string/no</string>
 
-
     <string name="rate_app_dialog_title">Rate the app</string>
     <string name="rate_app_dialog_message">Your feedback matters. Please share the love with a 5-star review.</string>
-    <string name="rate_app_dialog_positive_button">@string/yes</string>
-    <string name="rate_app_dialog_negative_button">@string/no</string>
+    <string name="rate_app_dialog_positive_button">Rate App</string>
+    <string name="rate_app_dialog_negative_button">@string/dismiss</string>
 
     <string name="give_feedback_dialog_title">We\'re sorry to hear that</string>
     <string name="give_feedback_dialog_message">Let us know how we can improve the app for you</string>
-    <string name="give_feedback_dialog_positive_button">@string/yes</string>
-    <string name="give_feedback_dialog_negative_button">@string/no</string>
+    <string name="give_feedback_dialog_positive_button">Give Feedback</string>
+    <string name="give_feedback_dialog_negative_button">@string/dismiss</string>
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="dismiss">Dismiss</string>
 
 </resources>
