Prepare for next release

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we fixed a bug that prevented opening home screen or shared links with our app.
+In this release, we added an information box to let you know how to install our search widget.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
