Update release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we added an information box to let you know how to install our search widget.
+In this release, we improved the data clearing process. We also polished the URL bar and fixed a few small bugs it had.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
