Feature/ask user for rating (#425)
* Upgrade AGP and gradle

* Initial crude implementation

* shows basic modal dialogs on (every) app launch
* detects if Play Store installed
* detects if app installed from Play Store (or is DEBUG)
* directs user to Play Store if they indicate enjoyment and agree to give us a rating

* Improve detection of Play Store app presence

* Record days that the app has been launched to be used by ratings prompt

* Remove race condition between app launches being first written and read

* Add tests for the new migration

* Record user decisions so they don't see the prompts again

* Tie flow into launching feedback activity

And add a bunch of unit tests

* Change search count db initialization logic to be simpler

* Ensure dialog fragments are not cancellable; change button colors

* Remove hardcoded strings from dialogs

* Code tidy

* Temporarily downgrade AGP and gradle as CI is failing with the upgrades

* Updated copy for first dialog

* Updated dialog text after A/B testing results

* Add second prompt which will be shown only in certain conditions

* Add extra tests around which initial prompt to show

* Code simplification

* Make appEnjoymentPromptEmitter a singleton and code tidy

* Remove existing app enjoyment DialogFragment before displaying another

* Move app enjoyment criteria to a centralised place

* Use ON_START instead of ON_CREATE for deciding whether to prompt or not

* Move app enjoyment criteria to a centralised place

* Renaming variables for better clarity

* Add app enjoyment engagement pixels

* Update dialog strings

* Updated pixels to use a common top-level prefix of `mrp`

* Add super class for enjoyment dialogs as they share a lot of logic

* Update test pixel resource

* Ensure dialogs are non-cancelable

* Code tidy

* Improve the way DB migrations are defined

* Fix tests to use the expected pixel fire method

* Use correct case fo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,6 +249,24 @@
     <string name="addWidgetInstructionsButtonGoHome">Go to Home Screen</string>
     <string name="addWidgetInstructionsButtonClose">Close</string>
 
+    <!-- App Enjoyment / Rating / Feedback -->
+    <string name="appEnjoymentDialogTitle">Enjoying DuckDuckGo?</string>
+    <string name="appEnjoymentDialogMessage">We\'d love to know what you think</string>
+    <string name="appEnjoymentDialogPositiveButton">I like it</string>
+    <string name="appEnjoymentDialogNegativeButton">It needs work</string>
+
+    <string name="rateAppDialogTitle">Rate the app</string>
+    <string name="rateAppDialogMessage">Your feedback matters. Please share the love with a review.</string>
+    <string name="rateAppDialogPositiveButton">Rate App</string>
+    <string name="rateAppDialogNegativeButton">@string/noThanks</string>
+
+    <string name="giveFeedbackDialogTitle">We\'re sorry to hear that</string>
+    <string name="giveFeedbackDialogMessage">Let us know how we can improve the app for you</string>
+    <string name="giveFeedbackDialogPositiveButton">Give Feedback</string>
+    <string name="giveFeedbackDialogNegativeButton">@string/noThanks</string>
+
+    <string name="noThanks">No Thanks</string>
+
     <!-- Notification Channel Names -->
     <string name="notificationChannelFileDownloading">File Downloading</string>
     <string name="notificationChannelFileDownloaded">File Downloaded</string>
