--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,8 @@
 ## What's new in this release?
-In this release, we improved the data clearing process. We also polished the URL bar and fixed a few small bugs it had.
+In this release, we improved data clearing to ensure DuckDuckGo preferences are kept while all other data is removed.
+
+We also added a way for users to give us feedback or rate the app.
+
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
