Update release notes for new release

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we fixed a potential crash when loading a new page and a small performance issue.
+In this release, we improved the options available when long pressing some links and added an enhanced flow for providing us with feedback.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
