383 - Add basic auth support (#460)
* Handle WebView onReceivedHttpAuthRequest callback when a page sends a HTTP authentication challenge.
#383
Add a new dialog that is shown when the client gets a HTTP auth challenge.
Add string resources for strings used in authentication dialog.
Add new command to handle authentication requests.
Add tests to cover new functionality.

* Add support to save credentials used for basic authentication.
#383
Refactored function parameters into data class.
Add property to BrowserViewState to indicate failed authentication.

* Add support to clear credentials used for basic authentication.
#383
Changed WebDataManager clearData function context parameter to WebViewDatabase to facilitate testing.
Update tests in WebViewDataManagerTest.

* Updates from PR feedback.
#383
Removed showing of 'about:blank' page when authentication request was cancelled.
Reverted `isFailedAuthentication` change to `BrowserViewState`

* Further PR feedback updates.
#383
Removed call to `setSelection` when showing keyboard in dialog.
Refactored use of `.let` to `if/else`
Added auto fill hints to dialog layout.
Removed stale log statement and unnecessary comment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,4 +263,13 @@
     <string name="clearNotificationTitle">Data clearing set to manual</string>
     <string name="clearNotificationDescription">Customize DuckDuckGo to automatically clear browsing data after every session.</string>
 
+    <!-- Authentication -->
+    <string name="authenticationDialogTitle">Sign In</string>
+    <string name="authenticationDialogMessage">%s requires a username and password.</string>
+    <string name="authenticationDialogPositiveButton">Sign In</string>
+    <string name="authenticationDialogNegativeButton">Cancel</string>
+    <string name="authenticationDialogUsernameHint">Username</string>
+    <string name="authenticationDialogPasswordHint">Password</string>
+
+
 </resources>
