Hotfix to reinstate old notification class to fix java.lang.ClassNotFoundException.

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we tweaked our favicon service and added HTTP basic authentication to let you logon to websites that use this.
+In this release, we tweaked our favicon service, added HTTP basic authentication to let you logon to websites that use this and made some stability enhancements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
