Provide a fix to the issue of HTML 5 video not playing. #473
Add setting to allow a user to disable the need for a gesture to play media.
Apply the setting whenever the tab fragment is resumed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="settingsAboutDuckduckgo">About DuckDuckGo</string>
     <string name="settingsVersion">Version</string>
     <string name="leaveFeedback">Leave Feedback</string>
+    <string name="settingsPlayMediaRequiresGesture">Require gesture for media playback</string>
 
     <!-- Settings - Automatically clearing data -->
     <string name="settingsAutomaticallyClearingDialogSave">Save</string>
