--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we improved our back behavior and fixed an issue that could sometimes open a duplicate shared tab.
+In this release, we made some small tweaks to improve the app and better measure engagement.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
