Update version and release notes for new release

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we made some small tweaks to improve the app and better measure engagement.
+In this release we focused on making pages load faster, and improved the way we handle back navigation.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
