--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,18 +9,18 @@
     <string name="onboardingNoTraceTitle">Leave No Trace</string>
     <string name="onboardingNoTraceDescription1">Tap the Fire Button to erase your tabs and browsing history.</string>
     <string name="onboardingNoTraceDescription2">Your data is toast!</string>
-    <string name="onboardingDefaultBrowserTitle">Make Us Your Default</string>
-    <string name="onboardingDefaultBrowserDescription">Make DuckDuckGo your default Browser app in settings.</string>
+    <string name="onboardingDefaultBrowserTitle">Set Us As Your Default Browser</string>
+    <string name="onboardingDefaultBrowserDescription">You can set DuckDuckGo as your default browser app in Settings.</string>
     <string name="onboardingDefaultBrowserGoToSettingsAction">Go to Settings</string>
     <string name="onboardingContinue">Continue</string>
 
     <!-- Unified Welcome Page -->
     <string name="unifiedOnboardingTitle">Welcome to DuckDuckGo!</string>
-    <string name="unifiedOnboardingSubtitle">Protecting your data has never been this easy.</string>
-    <string name="unifiedOnboardingBrowsingProtectionTitle">Browsing Protection</string>
-    <string name="unifiedOnboardingBrowsingProtectionSubtitle">Block trackers and browse securely by default.</string>
+    <string name="unifiedOnboardingSubtitle">Stay private as you search and browse the web.</string>
     <string name="unifiedOnboardingPrivateSearchTitle">Private Search</string>
     <string name="unifiedOnboardingPrivateSearchSubtitle">With DuckDuckGo, your searches are always private.</string>
+    <string name="unifiedOnboardingBrowsingProtectionTitle">Browsing Protection</string>
+    <string name="unifiedOnboardingBrowsingProtectionSubtitle">Block trackers and browse securely by default.</string>
     <string name="unifiedOnboardingDataClearingTitle">Data Clearing</string>
     <string name="unifiedOnboardingDataClearingSubtitle">Erase your browsing data with the tap of a button.</string>
     <string name="unifiedOnboardingCustomizationTitle">Customization</string>
